@@ -2,7 +2,7 @@
 
 Migrationsdir = @DATADIR@/ebox-dhcp/migration
 
-nobase_Migrations_SCRIPTS = 0001_import_to_mvc.pl 0002_add_services.pl
+nobase_Migrations_SCRIPTS = 0002_add_services.pl
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
 
